fix: 修复404问题 + 桌台管理菜单优化 + Java11兼容
- web.xml: Struts2过滤器从/*改为*.action，静态文件不再被拦截
- web.xml: 添加default Servlet的/映射，恢复Tomcat默认静态文件处理
- vite.config.js: 代理target加上上下文路径/restaurant_order_war_exploded
- AdminLayout: 移除门店管理子菜单，桌台管理提升为一级菜单
- AdminOrderService/AdminProductService/AdminUserService: .toList()改为.collect(Collectors.toList())，兼容Java11